# ResearchSummer2016

./: README.md
GLDM/: CMakeLists.txt  itkGrayLevelDifferenceCalculator.cxx  itkGrayLevelDifferenceCalculator.h
HaarWaveletImageFilter/: CMakeLists.txt  itkHaarWaveletImageFilter.cxx  itkHaarWaveletImageFilter.h  itkHaarWaveletImageFilter.txx
LocalBinaryPatternImageFilter/: CMakeLists.txt  itkLocalBinaryPatternImageFilter.cxx  itkLocalBinaryPatternImageFilter.h  itkLocalBinaryPatternImageFilter.txx
Minkowski/: CMakeLists.txt  itkMinkowski.cxx  itkMinkowski.h  itkMinkowskiCalculator.h
